对翻译简体中文版的角色服务器消息文件

--- a/conf/msg_conf/char_msg_chs.conf
+++ b/conf/msg_conf/char_msg_chs.conf
@@ -11,3 +11,16 @@
 // 因为熊猫模拟器碰到 UTF8-BOM 编码时, 会在文件读取时进行转码,
 // 而转换的目标编码与运行服务端的操作系统语言有关系
 //--------------------------------------------------------------
+
+// =============================================================
+// 熊猫模拟器拓展的消息 - 开始
+// =============================================================
+
+// 建立公会时候默认的职位名称
+2000: 会长大人
+2001: 第 %d 级会员
+2002: 可爱萌新
+
+// =============================================================
+// 熊猫模拟器拓展的消息 - 结束
+// =============================================================
