对消息文件的引入层级和关系进行梳理 (#243)

--- a/conf/msg_conf/login_msg_chn.conf
+++ b/conf/msg_conf/login_msg_chn.conf
@@ -1,5 +1,5 @@
 //--------------------------------------------------------------
-// 熊貓模擬器 - 地圖伺服器訊息文件 - 繁體中文版本
+// 熊貓模擬器 - 登錄伺服器訊息檔案 - 繁體中文版本
 //--------------------------------------------------------------
 // 關於當前訊息檔案的編碼建議:
 // 
