--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -651,9 +651,9 @@ Body:
 - Original: "Create channel %s alias %s type=%d, owner=%d/%d/%d\n"
   Translation: ""
 - Original: "Created Guild %d - %s (Guild Master: %s)\n"
-  Translation: ""
+  Translation: "已创建公会 - 公会编号: %d, 公会名称: %s, 会长名称: %s\n"
 - Original: "Created char: account: %d, char: %d, slot: %d, name: %s\n"
-  Translation: "已创建角色: 账号编号: %d, 角色编号: %d, 槽位编号: %d, 角色名称: %s\n"
+  Translation: "已创建角色 - 账号编号: %d, 角色编号: %d, 槽位编号: %d, 角色名称: %s\n"
 - Original: "Creating Guild (%s)\n"
   Translation: ""
 - Original: "Current script:\n"
@@ -667,7 +667,7 @@ Body:
 - Original: "DB error - data truncated (unknown source, columns are not bound)\n"
   Translation: "数据库错误 - 数据已被截断 (无法判断来源, 字段未绑定到变量)\n"
 - Original: "DB integrity check finished with success\n"
-  Translation: "已完成数据库表格和字段的完整性检测, 若未报错则表示检测通过.\n"
+  Translation: "已完成数据库表格和字段的完整性检测, 若未报错则检测通过.\n"
 - Original: "DNSBL: (%s) Blacklisted. User Kicked.\n"
   Translation: ""
 - Original: "Data: %s\n"
@@ -713,7 +713,7 @@ Body:
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
   Translation: "终端信息翻译诊断信息: 语言信息: %s | 位置编码: %s\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
-  Translation: "已完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据校验, 若未报错则表示检测通过.\n"
+  Translation: "已经完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据校验, 若未报错则检测通过.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已加载 [{CL_WHITE}]%d[{CL_RESET}] 个脚本, 里面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个传送点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个刷怪点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物已被缓存\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物未被缓存\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
@@ -1081,7 +1081,7 @@ Body:
 - Original: "Message #%d not found for langtype %d.\n"
   Translation: ""
 - Original: "Messages file not found: %s\n"
-  Translation: ""
+  Translation: "无法找到消息数据库文件: %s\n"
 - Original: "Missing %d right curlys at file '%s', line '%d'.\n"
   Translation: ""
 - Original: "Missing mandatory node \"%s\".\n"
@@ -2855,9 +2855,9 @@ Body:
 - Original: "instance_readdb_sub: TimeLimit must be an integer value for instance '%d', skipping...\n"
   Translation: ""
 - Original: "int_guild: Guild broken (%d)\n"
-  Translation: ""
+  Translation: "int_guild: 公会已被解散 (公会编号: %d)\n"
 - Original: "int_guild: Guild created (%d - %s)\n"
-  Translation: ""
+  Translation: "int_guild: 公会已被创建 (公会编号: %d - 公会名称: %s)\n"
 - Original: "int_guild: GuildBasicInfoChange: Unknown type %d\n"
   Translation: ""
 - Original: "int_guild: GuildMemberInfoChange: Unknown type %d\n"
