--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -651,9 +651,9 @@ Body:
 - Original: "Create channel %s alias %s type=%d, owner=%d/%d/%d\n"
   Translation: ""
 - Original: "Created Guild %d - %s (Guild Master: %s)\n"
-  Translation: ""
+  Translation: "已建立公會 - 公會編號: %d, 公會名稱: %s, 會長名稱: %s\n"
 - Original: "Created char: account: %d, char: %d, slot: %d, name: %s\n"
-  Translation: "已建立角色: 賬號編號: %d, 角色編號: %d, 槽位編號: %d, 角色名稱: %s\n"
+  Translation: "已建立角色 - 賬號編號: %d, 角色編號: %d, 槽位編號: %d, 角色名稱: %s\n"
 - Original: "Creating Guild (%s)\n"
   Translation: ""
 - Original: "Current script:\n"
@@ -667,7 +667,7 @@ Body:
 - Original: "DB error - data truncated (unknown source, columns are not bound)\n"
   Translation: "資料庫錯誤 - 資料已被截斷 (無法判斷來源, 欄位未繫結到變數)\n"
 - Original: "DB integrity check finished with success\n"
-  Translation: "已完成資料庫表格和欄位的完整性檢測, 若未報錯則表示檢測通過.\n"
+  Translation: "已完成資料庫表格和欄位的完整性檢測, 若未報錯則檢測通過.\n"
 - Original: "DNSBL: (%s) Blacklisted. User Kicked.\n"
   Translation: ""
 - Original: "Data: %s\n"
@@ -713,7 +713,7 @@ Body:
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
   Translation: "終端資訊翻譯診斷資訊: 語言資訊: %s | 位置編碼: %s\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
-  Translation: "已完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料校驗, 若未報錯則表示檢測通過.\n"
+  Translation: "已經完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料校驗, 若未報錯則檢測通過.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已載入 [{CL_WHITE}]%d[{CL_RESET}] 個指令碼, 裡面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個傳送點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個刷怪點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物已被快取\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物未被快取\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
@@ -1081,7 +1081,7 @@ Body:
 - Original: "Message #%d not found for langtype %d.\n"
   Translation: ""
 - Original: "Messages file not found: %s\n"
-  Translation: ""
+  Translation: "無法找到訊息資料庫檔案: %s\n"
 - Original: "Missing %d right curlys at file '%s', line '%d'.\n"
   Translation: ""
 - Original: "Missing mandatory node \"%s\".\n"
@@ -2855,9 +2855,9 @@ Body:
 - Original: "instance_readdb_sub: TimeLimit must be an integer value for instance '%d', skipping...\n"
   Translation: ""
 - Original: "int_guild: Guild broken (%d)\n"
-  Translation: ""
+  Translation: "int_guild: 公會已被解散 (公會編號: %d)\n"
 - Original: "int_guild: Guild created (%d - %s)\n"
-  Translation: ""
+  Translation: "int_guild: 公會已被建立 (公會編號: %d - 公會名稱: %s)\n"
 - Original: "int_guild: GuildBasicInfoChange: Unknown type %d\n"
   Translation: ""
 - Original: "int_guild: GuildMemberInfoChange: Unknown type %d\n"
