使物品特殊属性数据库能够给物品配置高优先级的公告策略

--- a/db/import-tmpl/item_properties.yml
+++ b/db/import-tmpl/item_properties.yml
@@ -18,12 +18,11 @@
 # Property
 # 可选节点, 用来标出物品有什么特殊属性
 #
-# 1 - 表示避免物品被玩家主动使用而消耗
-# 2 - 避免物品被作为发动技能的必要道具而消耗
-# 4 - 表示此物品是一个护身符类型的道具
+# &1 - 表示避免物品被玩家主动使用而消耗
+# &2 - 避免物品被作为发动技能的必要道具而消耗
+# &4 - 表示此物品是一个护身符类型的道具
 #
-# 这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加, 直接填写 3 即可
-# 若填 3 则表示: 避免该物品被主动使用或作为技能道具而消耗
+# 这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加 (填写 3 即可)
 #
 ###########################################################################
 #
@@ -37,6 +36,17 @@
 # 可选子节点: InvisibleWhenTheySee
 #   若设置为 true 表示: 当其他人查看我的装备时, 隐藏它的外观编号
 #   没有此字段, 或设为 false 表示: 不隐藏它的外观编号
+#
+###########################################################################
+#
+# AnnouceRules
+# 可选节点, 控制物品掉落时的特殊公告时机
+# 
+# &1 - 打死魔物, 魔物将道具掉落到地上时公告
+# &2 - 打死魔物, 掉落 MVP 奖励到玩家的背包时公告
+# &4 - 使用"偷窃"技能, 从魔物身上偷到物品时公告
+# 
+# 这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加 (填写 3 即可)
 #
 ###########################################################################
 
@@ -62,3 +72,4 @@ Body:
 #    ControlViewID:
 #      InvisibleWhenISee: false
 #      InvisibleWhenTheySee: false
+#    AnnouceRules: 0
