给 csv2yaml 汉化后的信息上一些颜色

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -831,7 +831,7 @@ Body:
 - Original: "Found sequence '[{CL_WHITE}] :[{CL_RESET}]' on line '[{CL_WHITE}]%u[{CL_RESET}]' in '[{CL_WHITE}]%s[{CL_RESET}]'. This can cause newer clients to crash.\n"
   Translation: ""
 - Original: "Found the file \"%s\", which requires migration to yml.\nDo you want to convert it now? (Y/N)\n"
-  Translation: "[資訊]: 發現 CSV 格式的資料檔案 \"%s\" 需要被遷移到 yml 格式.\n[詢問]: 請問是否需要對它進行升級轉換? (Y/N)\n"
+  Translation: "[{CL_WHITE}][資訊][{CL_RESET}]: 發現 CSV 格式的資料檔案 \"%s\" 需要被遷移到 yml 格式.\n[{CL_CYAN}][選擇][{CL_RESET}]: 請問是否需要對它進行升級轉換? (Y/N)\n"
 - Original: "Function: %s\n"
   Translation: ""
 - Original: "Function: %s (%d parameter%s):\n"
@@ -1379,7 +1379,7 @@ Body:
 - Original: "The communication passwords are set in map_athena.conf and char_athena.conf\n"
   Translation: ""
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
-  Translation: "[注意]: 轉換後即將輸出的 \"%s\" 已經有檔案存在.\n[選擇]: 你是否需要覆蓋\它? 這是最後一次確認. (Y/N)\n"
+  Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 轉換後即將輸出的 \"%s\" 已經有檔案存在.\n[{CL_CYAN}][選擇][{CL_RESET}]: 你是否需要覆蓋\它? 這是最後一次確認. (Y/N)\n"
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
   Translation: "登入伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u).\n\n"
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
