--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -831,7 +831,7 @@ Body:
 - Original: "Found sequence '[{CL_WHITE}] :[{CL_RESET}]' on line '[{CL_WHITE}]%u[{CL_RESET}]' in '[{CL_WHITE}]%s[{CL_RESET}]'. This can cause newer clients to crash.\n"
   Translation: ""
 - Original: "Found the file \"%s\", which requires migration to yml.\nDo you want to convert it now? (Y/N)\n"
-  Translation: "[信息]: 发现 CSV 格式的数据文件 \"%s\" 需要被迁移到 yml 格式.\n[询问]: 请问是否需要对它进行升级转换? (Y/N)\n"
+  Translation: "[{CL_WHITE}][信息][{CL_RESET}]: 发现 CSV 格式的数据文件 \"%s\" 需要被迁移到 yml 格式.\n[{CL_CYAN}][选择][{CL_RESET}]: 请问是否需要对它进行升级转换? (Y/N)\n"
 - Original: "Function: %s\n"
   Translation: ""
 - Original: "Function: %s (%d parameter%s):\n"
@@ -1379,7 +1379,7 @@ Body:
 - Original: "The communication passwords are set in map_athena.conf and char_athena.conf\n"
   Translation: ""
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
-  Translation: "[注意]: 转换后即将输出的 \"%s\" 已经有文件存在.\n[选择]: 你是否需要覆盖它? 这是最后一次确认. (Y/N)\n"
+  Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 转换后即将输出的 \"%s\" 已经有文件存在.\n[{CL_CYAN}][选择][{CL_RESET}]: 你是否需要覆盖它? 这是最后一次确认. (Y/N)\n"
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
   Translation: "登录服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u).\n\n"
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
