修正无法自动部署 import-tmpl 新增文件的问题

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -718,6 +718,10 @@ Body:
   Translation: ""
 - Original: "Deleting channel %s alias %s type %d\n"
   Translation: ""
+- Original: "Deploy %s is failed.\n"
+  Translation: "从 import-tmpl 目录复制 %s 时失败了, 请手动复制.\n"
+- Original: "Deploy %s is successful.\n"
+  Translation: "已经从 import-tmpl 目录中复制了 %s 文件.\n"
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
   Translation: "探测到 [{CL_WHITE}]'%s'[{CL_RESET}] 连接所指向的目标数据库当前的字符集为 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
