--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -718,6 +718,10 @@ Body:
   Translation: ""
 - Original: "Deleting channel %s alias %s type %d\n"
   Translation: ""
+- Original: "Deploy %s is failed.\n"
+  Translation: "從 import-tmpl 目錄複製 %s 時失敗了, 請手動複製.\n"
+- Original: "Deploy %s is successful.\n"
+  Translation: "已經從 import-tmpl 目錄中複製了 %s 檔案.\n"
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
   Translation: "探測到 [{CL_WHITE}]'%s'[{CL_RESET}] 連線所指向的目標資料庫當前的字符集為 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
