--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -1067,7 +1067,7 @@ Body:
 - Original: "Memory manager initialised: [{CL_WHITE}]%s[{CL_RESET}]\n"
   Translation: "記憶體洩露時將會直接記錄到: [{CL_WHITE}]%s[{CL_RESET}]\n"
 - Original: "Memory manager: Memory leaks found and fixed.\n"
-  Translation: ""
+  Translation: "記憶體管理機制: 發現記憶體洩露, 已自動釋放被洩露的記憶體.\n"
 - Original: "Memory manager: No memory leaks found.\n"
   Translation: "記憶體管理機制: 沒有發現記憶體洩露.\n"
 - Original: "Memory manager: args of aFree 0x%p is freed pointer %s:%d@%s\n"
