修正 getinventoryinfo 获取道具 unique_id 错误的问题

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1139,7 +1139,7 @@ Body:
 - Original: "Non-existant item %d on dropall list (account_id: %d, char_id: %d)\n"
   Translation: ""
 - Original: "Not all IP addresses in map_athena.conf configured, autodetecting...\n"
-  Translation: "尚未在 map_athena.conf 文件中指定任何 IP 地址, 正在自动检测 IP 地址...\n"
+  Translation: "尚未在 map_athena.conf 中指定任何 IP 地址, 正在自动检测 IP 地址...\n"
 - Original: "Now at: '%s' Coords: %d %d\n"
   Translation: ""
 - Original: "Occurred in file '[{CL_WHITE}]%s[{CL_RESET}]' on line %d and column %d.\n"
@@ -1443,7 +1443,7 @@ Body:
 - Original: "Unexpected type for argument %d. Expected variable, got %s.\n"
   Translation: ""
 - Original: "Unknown account (account: %s, ip: %s)\n"
-  Translation: ""
+  Translation: "客户端试图登录无效的账号 (账号: '%s', IP地址: %s)\n"
 - Original: "Unknown option '%s'.\n"
   Translation: ""
 - Original: "Unknown packet 0x%04X (length %d), %s session #%d, %d/%d (AID/CID) at %s\n"
