实现队长副本信息窗口中"销毁副本"按钮的功能

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1169,19 +1169,19 @@ Body:
 - Original: "Pandas Version: [{CL_WHITE}]%s[{CL_RESET}]\n"
   Translation: "熊猫模拟器版本: [{CL_WHITE}]%s[{CL_RESET}]\n"
 - Original: "Party Saved (%d - %s)\n"
-  Translation: ""
+  Translation: "已保存队伍信息 (队伍编号: %d - 队伍名称: %s).\n"
 - Original: "Party loaded (%d - %s).\n"
-  Translation: ""
+  Translation: "已加载队伍信息 (队伍编号: %d - 队伍名称: %s).\n"
 - Original: "Performance counter [{CL_WHITE}]'%s'[{CL_RESET}] fired %[{PRIuPTR}] times, took [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] ms\n"
   Translation: "性能计数器 [{CL_WHITE}]'%s'[{CL_RESET}] 触发了 %[{PRIuPTR}] 次, 总计耗时 [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] 毫秒\n"
 - Original: "Pet can't move. Holding position %d, class = %d\n"
   Translation: ""
 - Original: "Pet loaded (%d - %s).\n"
-  Translation: ""
+  Translation: "已加载宠物信息 (宠物编号: %d - 宠物名称: %s).\n"
 - Original: "Pet saved %d - %s.\n"
-  Translation: ""
+  Translation: "已保存宠物信息 (宠物编号: %d - 宠物名称: %s).\n"
 - Original: "Pincode changed for AID: %d\n"
-  Translation: ""
+  Translation: "已成功为变更了鼠标密码 (账号编号: %d)\n"
 - Original: "Pincode is disabled.\n"
   Translation: ""
 - Original: "Pinging SQL server to keep connection alive...\n"
