--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -1169,19 +1169,19 @@ Body:
 - Original: "Pandas Version: [{CL_WHITE}]%s[{CL_RESET}]\n"
   Translation: "熊貓模擬器版本: [{CL_WHITE}]%s[{CL_RESET}]\n"
 - Original: "Party Saved (%d - %s)\n"
-  Translation: ""
+  Translation: "已儲存隊伍資訊 (隊伍編號: %d - 隊伍名稱: %s).\n"
 - Original: "Party loaded (%d - %s).\n"
-  Translation: ""
+  Translation: "已載入隊伍資訊 (隊伍編號: %d - 隊伍名稱: %s).\n"
 - Original: "Performance counter [{CL_WHITE}]'%s'[{CL_RESET}] fired %[{PRIuPTR}] times, took [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] ms\n"
   Translation: "效能計數器 [{CL_WHITE}]'%s'[{CL_RESET}] 觸發了 %[{PRIuPTR}] 次, 總計耗時 [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] 毫秒\n"
 - Original: "Pet can't move. Holding position %d, class = %d\n"
   Translation: ""
 - Original: "Pet loaded (%d - %s).\n"
-  Translation: ""
+  Translation: "已載入寵物資訊 (寵物編號: %d - 寵物名稱: %s).\n"
 - Original: "Pet saved %d - %s.\n"
-  Translation: ""
+  Translation: "已儲存寵物資訊 (寵物編號: %d - 寵物名稱: %s).\n"
 - Original: "Pincode changed for AID: %d\n"
-  Translation: ""
+  Translation: "已成功\為變更了滑鼠密碼 (賬號編號: %d)\n"
 - Original: "Pincode is disabled.\n"
   Translation: ""
 - Original: "Pinging SQL server to keep connection alive...\n"
