战斗配置文件第一轮简单汉化

--- a/conf/battle/battleground.conf
+++ b/conf/battle/battleground.conf
@@ -1,32 +1,36 @@
+﻿//--------------------------------------------------------------
+// 熊猫模拟器战斗配置选项
+// 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
+// 由 Ancyker 改写成纯英文
 //--------------------------------------------------------------
-// rAthena Battle Configuration File
-// Originally Translated by Peter Kieser <pfak@telus.net>
-// Made in to plainer English by Ancyker
-//--------------------------------------------------------------
-// Note 1: Value is a config switch (on/off, yes/no or 1/0)
-// Note 2: Value is in percents (100 means 100%)
-// Note 3: Value is a bit field. If no description is given,
-//         assume unit types (1: Pc, 2: Mob, 4: Pet, 8: Homun, 16: Mercenary, 128: NPC, 512: Elemental)
+//   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
+// 百分比选项: 填写 100 即表示 100%
+//   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
+//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
+//             128: NPC, 512: 元素精灵
+//             掩码选项一个数值可以表示里面有多个内容. 
+//             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-// Melee damage adjustments (non skills) for Battleground maps (Note 2)
+// 在战场中除了技能外的近距离攻击伤害倍率 (百分比选项)
 bg_short_attack_damage_rate: 80
 
-// Ranged damage adjustments (non skills) for Battleground maps (Note 2)
+// 在战场中除了技能外的远距离攻击伤害倍率 (百分比选项)
 bg_long_attack_damage_rate: 80
 
-// Weapon skills damage adjustments for Battleground maps (Note 2)
+// 在战场中的物理技能伤害倍率 (百分比选项)
 bg_weapon_attack_damage_rate: 60
 
-// Magic skills damage adjustments for Battleground maps (Note 2)
+// 在战场中的魔法技能伤害倍率 (百分比选项)
 bg_magic_attack_damage_rate: 60
 
-// Misc skills damage adjustments for Battleground maps (Note 2)
+// 在战场中的特殊技能伤害倍率 (百分比选项)
 bg_misc_attack_damage_rate: 60
 
-// Flee penalty on BG grounds.
-// NOTE: It's %, not absolute, so 20 is -20% of your total flee
+// 在战场地图中的回避惩罚 (百分比选项)
+// 这里的回避是指玩家属性面板中的 Flee 属性
+// 注意: 这是一个百分比数值, 所以填写 20 表示在战场中的回避要比正常地图减少 20%
 bg_flee_penalty: 20
 
-// Interval before updating the bg-member map mini-dots (milliseconds)
+// 每隔多长时间更新一次小地图上战场队友的位置 (以毫秒为单位)
 bg_update_interval: 1000
