--- a/conf/battle/drops.conf
+++ b/conf/battle/drops.conf
@@ -1,101 +1,203 @@
+﻿//--------------------------------------------------------------
+// 熊猫模拟器战斗配置选项
+// 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
+// 由 Ancyker 改写成纯英文
 //--------------------------------------------------------------
-// rAthena Battle Configuration File
-// Originally Translated by Peter Kieser <pfak@telus.net>
-// Made in to plainer English by Ancyker
-//--------------------------------------------------------------
-// Note 1: Value is a config switch (on/off, yes/no or 1/0)
-// Note 2: Value is in percents (100 means 100%)
+//   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
+// 百分比选项: 填写 100 即表示 100%
+//   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
+//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
+//             128: NPC, 512: 元素精灵
+//             掩码选项一个数值可以表示里面有多个内容. 
+//             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-// If an item is dropped, does it go straight into the user's inventory? (Note 1)
+// 物品掉落时, 是否直接掉落到玩家的背包中? (开关选项)
 item_auto_get: no
 
-// How long does it take for an item to disappear from the floor after it is dropped? (in milliseconds)
+// 掉落在地上的物品过多少时间后会自动消失? （单位为毫秒）
 flooritem_lifetime: 60000
 
-// Grace time during which only the person who did the most damage to a monster can get the item? (in milliseconds)
+// 杀死普通魔物后, 给予魔物最一大伤害的玩家
+// 在多长时间内拥有魔物掉落物品的第一优先拾取权? (单位为毫秒)
+// 
+// 在第一优先拾取时间内, 其他人统统无法捡取魔物掉落的物品
+// 
+// 按照默认配置, 魔物掉落的物品在 3000 毫秒内除了造成第一大伤害
+// 的玩家, 其他人无法拾取! 
 item_first_get_time: 3000
 
-// Grace time during which only the first and second person who did the most damage to a monster can get the item? (in milliseconds)
-// (Takes effect after item_first_get_time elapses)
+// 杀死普通魔物后, 给予魔物第二大伤害的玩家
+// 在过了第一优先拾取时间之后, 在多长时间内拥有魔物掉落物品的
+// 第二优先拾取权? (单位为毫秒)
+//
+// 在第二优先拾取时间内, 除了给予第一和第二大伤害的玩家之外, 
+// 其他人统统无法捡取魔物掉落的物品
+// 
+// 按照默认配置, 魔物掉落的物品在 3000 + 1000 毫秒内除了造成
+// 第一、第二大伤害的玩家, 其他人无法拾取! 
 item_second_get_time: 1000
 
-// Grace time during which only the first, second and third person who did the most damage to a monster can get the item? (in milliseconds)
-// (Takes effect after the item_second_get_time elapses)
+// 杀死普通魔物后, 给予魔物第三大伤害的玩家
+// 在过了第一和第二优先拾取时间后, 在多长时间内拥有魔物掉落
+// 物品的第三优先拾取权? (单位为毫秒)
+//
+// 在第三优先拾取时间内, 除了给予第一、第二大、第三大伤害的
+// 玩家, 其他人统统无法捡取魔物掉落的物品
+//
+// 按照默认配置, 魔物掉落的物品在 3000 + 1000 + 1000 毫秒内
+// 除了造成第一、第二和第三大伤害的玩家, 其他人无法拾取! 
 item_third_get_time: 1000
 
-// Grace time to apply to MvP reward items when the Most Valuable Player can't get the prize item and it drops on the ground? (in milliseconds)
+// 杀死 MVP 魔物后, 给予魔物最一大伤害的玩家
+// 在多长时间内拥有MVP魔物掉落物品的第一优先拾取权?  (单位为毫秒)
+// 
+// 在第一优先拾取时间内, 其他人统统无法捡取 MVP 魔物掉落的物品
+// 
+// 按照默认配置, MVP 魔物掉落的物品在 10000 毫秒内除了造成
+// 第一大伤害的玩家, 其他人无法拾取! 
 mvp_item_first_get_time: 10000
 
-// Grace time for the first and second MvP so they can get the item? (in milliseconds)
-// (Takes effect after mvp_item_first_get_time elapses)
+// 杀死 MVP 魔物后, 给予魔物第二大伤害的玩家
+// 在过了第一优先拾取时间之后, 在多长时间内拥有 MVP 魔物掉落物品的
+// 第二优先拾取权? (单位为毫秒)
+//
+// 在第二优先拾取时间内, 除了给予第一和第二大伤害的玩家之外, 
+// 其他人统统无法捡取 MVP 魔物掉落的物品
+// 
+// 按照默认配置, MVP 魔物掉落的物品在 10000 + 10000 毫秒内除了造成
+// 第一、第二大伤害的玩家, 其他人无法拾取! 
 mvp_item_second_get_time: 10000
 
-// Grace time for the first, second and third MvP so they can get the item? (in milliseconds)
-// (Takes effect after mvp_item_second_get_time elapses)
+// 杀死 MVP 魔物后, 给予魔物第三大伤害的玩家
+// 在过了第一和第二优先拾取时间后, 在多长时间内拥有 MVP 魔物掉落
+// 物品的第三优先拾取权? (单位为毫秒)
+//
+// 在第三优先拾取时间内, 除了给予第一、第二大、第三大伤害的
+// 玩家, 其他人统统无法捡取 MVP 魔物掉落的物品
+//
+// 按照默认配置, MVP 魔物掉落的物品在 10000 + 10000 + 2000 毫秒内
+// 除了造成第一、第二和第三大伤害的玩家, 其他人无法拾取! 
 mvp_item_third_get_time: 2000
 
-// Item drop rates (Note 2)
+//--------------------------------------------------------------
+// 物品掉落机率设置 (百分比选项)
+//--------------------------------------------------------------
+// 接下来的设定都是涉及到物品掉落倍率的控制, 每一种物品的掉率
+// 控制都分为大概4个选项, 下面我们详细说明:
+//
+// item_rate_XXXXXX ----
+//     这个是指普通魔物掉落此类物品的倍率
+//
+//     注意: 这是个倍率选项, 填写100表示1倍, 填写10000表示100倍
+// 
+// item_rate_XXXXXX_boss ----
+//     这个是指拥有BOSS属性的魔物掉落此类物品的倍率
+//
+//     注意: 这是个倍率选项, 填写100表示1倍, 填写10000表示100倍
+//
+// item_rate_XXXXXX_mvp ----
+//     这个是指MVP魔物掉落此类物品的倍率
+//
+//     注意: 这是个倍率选项, 填写100表示1倍, 填写10000表示100倍
+// 
+// item_drop_XXXXXX_min ----
+//     这个是指普通&BOSS魔物掉落此类物品时, 掉率最小下限是多少
+//
+//     比如假设有人不小心设置了某个魔物掉落某物品的掉率是0, 
+//     而此选项设置的是1的话, 那么这物品的最小掉率将会是 0.01%
+//
+//     注意: 此选项是掉率, 而不是倍率. 根据 100% = 10000 的公式
+//           来说, 填写 1 则表示掉率的最小下限是 0.01%
+//
+// item_drop_XXXXXX_max ----
+//     这个是指普通&BOSS魔物掉落此类物品时, 掉率最大上限是多少
+//
+//     比如设置了某个魔物掉落某物品的掉率是9000（即90%的掉率）, 
+//     在玩家吃了双倍掉宝糖之后, 此物品的掉率可能会翻倍而
+//     变成 180% . 若将此选项设置为8000的话, 那么这物品的最大
+//     掉率将会是 80.00% 而不是 180%
+//
+//     注意: 此选项是掉率, 而不是倍率. 根据 100% = 10000 的公式
+//           来说, 填写 80 则表示掉率的最大上限是 80.00%
+//
+//--------------------------------------------------------------
 
-// The rate the common items are dropped (Items that are in the ETC tab, besides card)
+// 普通物品的掉落倍率
+// 普通物品 - 是指物品栏里“其他”页面中除了卡片以外的物品
 item_rate_common: 100
 item_rate_common_boss: 100
 item_rate_common_mvp: 100
 item_drop_common_min: 1
 item_drop_common_max: 10000
 
-// The rate healing items are dropped (items that restore HP or SP)
+// 治愈类物品的掉落倍率
+// 治愈类物品 - 是指能够恢复HP/SP的物品, 比如红色药水
 item_rate_heal: 100
 item_rate_heal_boss: 100
 item_rate_heal_mvp: 100
 item_drop_heal_min: 1
 item_drop_heal_max: 10000
 
-// The rate at which usable items (in the item tab) other then healing items are dropped.
+// 可用类物品的掉落倍率
+// 可用类物品 - 是指物品栏里“消耗”页面中除了治愈类物品外的其他物品
 item_rate_use: 100
 item_rate_use_boss: 100
 item_rate_use_mvp: 100
 item_drop_use_min: 1
 item_drop_use_max: 10000
 
-// The rate at which equipment is dropped.
+// 装备类物品的掉落倍率
+// 装备类物品 - 是指头饰、武器、披肩、饰品、盔甲、饰品、鞋子等
 item_rate_equip: 100
 item_rate_equip_boss: 100
 item_rate_equip_mvp: 100
 item_drop_equip_min: 1
 item_drop_equip_max: 10000
 
-// The rate at which cards are dropped
+// 卡片类物品的掉落倍率
+// 卡片类物品 - 比如波利卡片、疯兔卡片、大嘴鸟卡片等
 item_rate_card: 100
 item_rate_card_boss: 100
 item_rate_card_mvp: 100
 item_drop_card_min: 1
 item_drop_card_max: 10000
 
-// The rate adjustment for the MVP items that the MVP gets directly in their inventory
-// Mode: 0 - official order, 1 - random order, 2 - all items
+// MVP 奖励物品的掉落倍率
+// 当玩家打死一个 MVP 魔物并获得 MVP 称号时, 会有特殊的 MVP 奖励物品直接
+// 掉落到玩家的背包中, 这里控制的就是这些直接掉落到背包中的物品的掉率
+// 掉落模式选择: 
+//   0 - 玩家只获得一个 MVP 奖励物品, 按照官服顺序(默认)
+//   1 - 玩家只获得一个 MVP 奖励物品, 按照随机顺序
+//   2 - 玩家将获得此 MVP 魔物能掉落的全部 MVP 奖励物品(非变态服慎用)
 item_rate_mvp: 100
 item_drop_mvp_min: 1
 item_drop_mvp_max: 10000
 item_drop_mvp_mode: 0
 
-// The rate adjustment for card-granted item drops.
+// 卡片或装备掉落物品的倍率
+// 有一些卡片或者装备的效果是“打死魔物有1%机率掉落某某物品”, 
+// 这类效果可以通过下面的选项来控制倍率, 比如设定为1000(即10倍)的话
+// 那么就会变成“打死魔物有10%机率掉落某某物品”
 item_rate_adddrop: 100
 item_drop_add_min: 1
 item_drop_add_max: 10000
 
-// Rate adjustment for Treasure Box drops (these override all other modifiers)
+// 公会宝箱掉落物品的倍率
+// 这里的公会宝箱是指“会长的秘密房间”中出现的宝箱
+// 提高此选项的倍率, 可以让会长有更高的机率可以从公会宝箱中开出好东西
+// 注意: 此选项和“神秘箱子”半毛钱关系都没有
 item_rate_treasure: 100
 item_drop_treasure_min: 1
 item_drop_treasure_max: 10000
 
-// Use logarithmic drops? (Note 1)
-// Logarithmic drops scale drop rates in a non-linear fashion using the equation 
-// Droprate(x,y) = x * (5 - log(x)) ^ (ln(y) / ln(5))
-// Where x is the original drop rate and y is the drop_rate modifier (the previously mentioned item_rate* variables)
-// Use the following table for an idea of how the rate will affect drop rates when logarithmic drops are used:
-// Y: Original Drop Rate
-// X: Rate drop modifier (eg: item_rate_equip)
+// 是否使用对数算法来计算掉率? (开关选项)
+// 使用对数方程以非线性的方式来缩放物品掉率
+// 掉率(x,y) = x * (5 - log(x)) ^ (ln(y) / ln(5))
+// 这里的 x 为原始掉率, y 为物品掉率的调整值 (如本配置文件中以 item_rate* 开头的选项)
+// 使用下表来了解使用对数算法时, 对掉率的影响是怎样的:
+// Y: 物品的原始掉率(单位为百分比)
+// X: 物品掉率的调整值 (例如: item_rate_equip)
 //  X\Y | 0.01 0.02  0.05  0.10  0.20  0.50  1.00  2.00  5.00 10.00 20.00
 // -----+---------------------------------------------------------------
 //   50 | 0.01 0.01  0.03  0.06  0.11  0.30  0.62  1.30  3.49  7.42 15.92
@@ -110,43 +212,108 @@ item_drop_treasure_max: 10000
 //50000 | 5.00 7.87 13.98 21.12 31.23 50.31 69.56 92.48  100%  100%  100%
 item_logarithmic_drops: no
 
-// Can the monster's drop rate become 0? (Note 1)
-// Default: no (as in official servers).
+// 在魔物数据库中, 是否允许配置某个物品的掉率为0? (开关选项)
+// 比如: 波利设置自己的“空瓶”掉率为 0
+// 默认值为: no (官服设置).
+//
+// 当此选项设置为 no 的时候, 当服务器发现魔物某个物品的掉率为 0 时, 
+// 会将这件物品的掉率强制设置为 0.01%
 drop_rate0item: no
 
-// Increase item drop rate +0.01%? (Note 1)
-// On official servers it is possible to get 0.00% drop chance so all items are increased by 0.01%.
-// NOTE: This is viewed as a bug to rAthena.
-// Default: no
+// 是否给部分物品增加 0.01% 的掉率?  (开关选项)
+// 在官方服务器中是不可能有魔物的某个物品掉率是 0.00% 的, 开启此选项
+// 之后将在加载完成魔物数据库的掉率信息时, 将掉率低于 50.00% 的物品
+// 增加 0.01% 的掉率
+//
+// 提示: 这个选项实际上和上一个选项“drop_rate0item”是一样的, 都是
+// 为了解决 rAthena 在早期出现的“有物品掉率为 0.00% 导致出BUG”的问题
+// 现在虽然允许物品的掉率为 0.00% 了, 但是这个选项和上一个选项一直
+// 没有被移除, 大家基本上可以不用关心他们两了. 
+// 
+// 默认值为: no
 drop_rateincrease: no
 
-// Makes your LUK value affect drop rates on an absolute basis.
-// Setting to 100 means each luk adds 0.01% chance to find items
-// (regardless of item's base drop rate).
+// 让角色的 LUK 按“绝对值”提高掉宝率.
+// 当您将此选项设置为 100 的话, 则表示每一点 LUK 将提升0.01%的物品掉率
+//
+// 假设您的角色有 100 点 LUK 的话, 那么:
+// 此项设置为 100 , 将提高 0.01% x 100 = 1% 的掉宝率
+// 此项设置为 200 , 将提高 0.01% x 200 = 2% 的掉宝率
+// 此项设置为1000 , 将提高 0.01% x 1000=10% 的掉宝率
+//
+// 假如设置为 1000, 且您的 LUK 为 100, 那么原来空瓶的掉率是5%, 将变成15%
+// 
+// 注意: 计算是基于物品的基础掉率, 而不是吃了掉宝糖之后的掉率
 drops_by_luk: 0
 
-// Makes your LUK value affect drop rates on a relative basis.
-// Setting to 100 means each luk adds 1% chance to find items
-// (So at 100 luk, everything will have double chance of dropping).
+// 让角色的 LUK 按“百分比”提高掉宝率
+// 当您将此选项设置为 100 的话, 则表示每一点 LUK 将提升物品原来掉率的1%
+//
+// 假设您的角色有 100 点 LUK 的话, 那么:
+// 此项设置为 100 , 将提高物品原掉率的   1% x 100LUK = 100% 的掉宝率
+// 此项设置为 50  , 将提高物品原掉率的 0.5% x 100LUK = 50%  的掉宝率
+// 此项设置为 20  , 将提高物品原掉率的 0.2% x 100LUK = 20%  的掉宝率
+//
+// 假如设置为 100, 且您的 LUK 为 100, 那么原来空瓶的掉率是7%, 将变成14%
+// 这种情况下, 可以理解为所有物品都将拥有双倍掉率
+//
+// 假如设置为 20, 且您的 LUK 为 100, 那么原来苹果的掉率是50%, 将变成60%
+// 苹果的原掉率50% + (原掉率50% x LUK加成20%) = 原掉率50% + 10% = 60%
+//
+// 如果同时设置了 drops_by_luk 和 drops_by_luk2, 那么在计算掉率的时候
+// 会优先计算 drops_by_luk 的加成, 得到的值再与 drops_by_luk2 做运算.
+// 参考的掉率计算公式为: 
+// 0.5 + (掉率 + (LUK x drops_by_luk / 100)) x LUK x drops_by_luk2 / 10000.
 drops_by_luk2: 0
 
-// The rate of monsters dropping ores by the skill Ore Discovery (Default is 100)
+// 设置“寻找矿石”技能的成功倍率 (默认值为 100)
+// 铁匠学习“寻找矿石”技能后, 打死魔物有 0.1% 的概率掉落矿石
+//
+// 此项设置为 100   时, 打死魔物会有 0.1% 的概率掉落矿石
+// 此项设置为 1000  时, 打死魔物会有 1%   的概率掉落矿石
+// 此项设置为 10000 时, 打死魔物会有 10%   的概率掉落矿石
 finding_ore_rate: 100
 
-// Whether or not Marine Spheres and Floras summoned by Alchemist drop items?
-// This setting has three available values:
-// 0: Nothing drops.
-// 1: Only marine spheres drop items.
-// 2: All alchemist summons drop items.
+// 炼金术师和基因学者召唤出来的气泡虫被打死后是否掉落物品? 
+// 这个选项有三个可选值, 如下:
+// 0: 不掉落物品
+// 1: 只有气泡虫会掉落物品
+// 2: 只要是炼金术师或基因学者召唤的魔物, 都会掉落物品
+//
+// 于 2015年8月26日23:37:17 经过验证, 实际上目前除了气泡虫之外, 
+// 炼金术师通过“生物调拨”技能召唤的其他魔物, 比如食人花等, 哪怕
+// 您将此参数配置为 2 也不会掉落物品了. 
+// 
+// 因为他们的mob_db里面就没有配置他们能掉落的物品~ 召唤出来的食
+// 人花魔物编号和野外的食人花的魔物编号不同, 野外的食人花在mob_db里
+// 面是配置会掉物品的, 而召唤出来的食人花虽然外表一样, 但是mob_db里
+// 面的配置却是什么都不掉落. [Sola丶小克]
+// 
+// 如果你有需求, 想要让召唤出来的魔物也能掉落东西, 那么你需要关注
+// 以下的几个特殊的魔物编号:
+// 
+// 1589 - 曼陀罗魔花
+// 1579 - 海葵
+// 1575 - 食人花
+// 1555 - 苗娃佩瑞丝
+// 1590 - 邪恶向日葵
+//
+// 您可以在mob_db中找到他们, 给他们赋予会掉落的道具, 这样再将此选项
+// 设置为 2 即可让他们掉落东西. 
 alchemist_summon_reward: 1
 
-// Make broadcast ** Player1 won Pupa's Pupa Card (chance 0.01%) ***
-// This can be set to any value between 0~10000.
-// Note: It also announces STEAL skill usage with rare items
-// 0 = don't show announces at all
-// 1 = show announces for 0.01% drop chance items
-// 333 = show announces for 3.33% or lower drop chance items
-// 10000 = show announces for all items
+// 当玩家打到/偷到某个道具的时候, 如果这个道具的掉率小于等于此选项
+// 设置的值, 则会显示如下所示的广播: 
+// 
+// 打怪掉落广播: ** GM01 击杀 波利 后掉落了 杰勒比结晶 (掉率为: 1.00%) ***
+// 偷到物品广播: ** GM01 偷到了 波利 持有的 杰勒比结晶 (掉率为: 1.00%) ***
+// 
+// 此选项可以填写的数值范围是 0~10000 之间.
+// 
+// 填写 0     不显示此类广播
+// 填写 1     当打到/偷到的物品的掉率小于等于 0.01% 则广播
+// 填写 333   当打到/偷到的物品的掉率小于等于 3.33% 则广播
+// 填写 10000 当打到/偷到任何物品, 都广播
 rare_drop_announce: 0
 
 // Does autoloot take into account player bonuses and penalties? (Note 1)
