--- a/conf/battle/party.conf
+++ b/conf/battle/party.conf
@@ -1,10 +1,15 @@
+﻿//--------------------------------------------------------------
+// 熊猫模拟器战斗配置选项
+// 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
+// 由 Ancyker 改写成纯英文
 //--------------------------------------------------------------
-// rAthena Battle Configuration File
-// Originally Translated by Peter Kieser <pfak@telus.net>
-// Made in to plainer English by Ancyker
-//--------------------------------------------------------------
-// Note 1: Value is a config switch (on/off, yes/no or 1/0)
-// Note 2: Value is in percents (100 means 100%)
+//   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
+// 百分比选项: 填写 100 即表示 100%
+//   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
+//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
+//             128: NPC, 512: 元素精灵
+//             掩码选项一个数值可以表示里面有多个内容. 
+//             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
 // If someone steals (gank/steal skills), show name in party? (Note 1)
@@ -53,9 +58,10 @@ idle_no_share: no
 //     140% party experience in total, so each member receives 140%/5 = 28% exp (instead of 20%).
 party_even_share_bonus: 0
 
-// Display party name regardless if player is in a guild.
-// Official servers do not display party name unless the user is in a guild. (Note 1)
-display_party_name: no
+// 无论玩家是否在公会中, 都在角色名附近显示出队伍名称.
+// 在官方服务器中, 如果玩家不在公会中是不会显示队伍名称的. (开关选项)
+// 默认值: rAthena 官方默认为 no, 熊猫模拟器为 yes
+display_party_name: yes
 
 // Prevent multiple characters of the same account to join the same party. (Note 1)
 block_account_in_same_party: yes
